--- a/resources/search/config.json
+++ b/resources/search/config.json
@@ -1,7 +1,7 @@
 {
 	"wgCitizenSearchGateway": "mwRestApi",
 	"wgCitizenMaxSearchResults": 10,
-	"wgScriptPath": "/w", 
+	"wgScriptPath": "/",
 	"isAdvancedSearchExtensionEnabled": false,
 	"isMediaSearchExtensionEnabled": false
 }
